--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: false
 language: node_js
 node_js:
 - '10'
@@ -8,9 +7,10 @@ before_install:
 - openssl aes-256-cbc -K $encrypted_a65247dffca0_key -iv $encrypted_a65247dffca0_iv
   -in deploy_rsa.enc -out ./deploy_rsa -d
 before_deploy:
-- eval "$(ssh-agent -s)"
-- chmod 600 ./deploy_rsa
-- ssh-add ./deploy_rsa
+  - openssl rsa -in ./deploy_rsa -out ./deploy_rsa_new
+  - eval "$(ssh-agent -s)"
+  - chmod 600 ./deploy_rsa_new
+  - ssh-add ./deploy_rsa_new
 deploy:
   provider: script
   script: bash ./bin/deploy.sh
